conky (1.11.6-2) UNRELEASED; urgency=medium

  * Cherrypick upstream patch to make build reproducible.

 -- Vincent Cheng <vcheng@debian.org>  Sun, 16 Aug 2020 18:55:40 -0700

conky (1.11.6-1) unstable; urgency=medium

  * Acknowledge NMU, thanks to Boyuan Yang!
  * New upstream release. (Closes: #950400)
    - Fix crash caused by temporary virtual net interfaces. (Closes: #900001)
    - Add build-dep on liblua5.3-dev.
    - Drop build-dep on liblua5.1-0-dev, libtolua++5.1-dev.
  * Enable previously disabled features in conky-all:
    - iCal (add build-dep on libical-dev)
    - IRC (add build-dep on libircclient-dev)
    - iconv
    - systemd journal (add build-dep on libsystemd-dev)
  * Update to debhelper compat level 12.
  * Update Standards version to 4.5.0.
  * Update Vcs-* links to point to salsa.
  * Add upstream metadata file.
  * Drop debug packages and migrate to auto-generated dbgsym instead.
  * Enable all build hardening flags.

 -- Vincent Cheng <vcheng@debian.org>  Sun, 09 Aug 2020 19:46:49 -0700

conky (1.10.8-1.1) unstable; urgency=high

  * Non-maintainer upload.
  * debian/control: Build-depends on libdbus-glib-1-dev.
    (Closes: #962330)

 -- Boyuan Yang <byang@debian.org>  Fri, 12 Jun 2020 06:26:48 -0400

conky (1.10.8-1) unstable; urgency=medium

  * Acknowledge NMU, thanks to Adrian Bunk!
  * New upstream release.
    - Fix segfault when kernel reports non-sequential SMP CPU indices.
      (Closes: #873446)
    - Drop debian/patches/gcc-7.patch, applied upstream.
  * Remove build-dep on automake. (Closes: #865138)
  * Update Standards version from 3.9.8 to 4.1.3.
    - Update all priority: extra packages to priority: optional.

 -- Vincent Cheng <vcheng@debian.org>  Wed, 28 Feb 2018 02:22:09 -0800

conky (1.10.6-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix FTBFS with gcc 7. (Closes: #853353)

 -- Adrian Bunk <bunk@debian.org>  Sun, 03 Sep 2017 18:12:29 +0300

conky (1.10.6-1) unstable; urgency=medium
